[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/creatures/fish/Chonkus.gd" type="Script" id=1]
[ext_resource path="res://resources/implementations/items/ItemFish.tres" type="Resource" id=2]
[ext_resource path="res://models/food_kit/fish.glb" type="PackedScene" id=3]
[ext_resource path="res://Scenes/sfx/SoundLib_Chonkus.tscn" type="PackedScene" id=4]

[sub_resource type="CapsuleShape3D" id=2]
radius = 0.5

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("fish:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("fish:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ Vector3( 12, 2, 3 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "swimming"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("fish:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 1, 2 ),
"transitions": PackedFloat32Array( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 9, 3, 3 ), Vector3( 12, 2, 3 ), Vector3( 9, 3, 3 ) ]
}

[node name="Chonkus" type="CharacterBody3D" groups=["fish"]]
script = ExtResource( 1 )
ItemFishResource = ExtResource( 2 )

[node name="fish" parent="." instance=ExtResource( 3 )]
transform = Transform3D( 12, 0, 0, 0, 2, 0, 0, 0, 3, 0, -0.440623, 0 )

[node name="collider" type="CollisionShape3D" parent="."]
shape = SubResource( 2 )

[node name="view_rays" type="Node3D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "swimming"
anims/RESET = SubResource( 4 )
anims/swimming = SubResource( 3 )

[node name="IdleSoundTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="SoundLib_Chonkus" parent="." instance=ExtResource( 4 )]

[connection signal="timeout" from="IdleSoundTimer" to="." method="_on_IdleSoundTimer_timeout"]
